packages/vuetify/src/components/VField/VField.sass
@use 'sass:map'
@use 'sass:math'
@use 'sass:selector'
@use '../../styles/settings'
@use '../../styles/tools'
@use './variables' as *

@include tools.layer('components')
  /* region INPUT */
  .v-field
    display: grid
    grid-template-areas: "prepend-inner field clear append-inner"
    grid-template-columns: min-content minmax(0, 1fr) min-content min-content
    font-size: $field-font-size
    letter-spacing: $field-letter-spacing
    max-width: $field-max-width
    border-radius: $field-border-radius
    contain: layout
    flex: 1 0
    grid-area: control
    position: relative

    --v-theme-overlay-multiplier: 1
    --v-field-padding-start: #{$field-control-padding-start}
    --v-field-padding-end: #{$field-control-padding-end}
    --v-field-padding-top: #{$field-control-padding-top}
    --v-field-padding-bottom: #{$field-control-padding-bottom}
    --v-field-input-padding-top: #{$field-input-padding-top}
    --v-field-input-padding-bottom: #{$field-input-padding-bottom}

    &--disabled
      opacity: var(--v-disabled-opacity)
      pointer-events: none

    .v-chip
      --v-chip-height: #{$field-chip-height}

  /* endregion */
  /* region MODIFIERS */
  .v-field
    &--prepended
      padding-inline-start: $field-control-affixed-padding

    &--appended
      padding-inline-end: $field-control-affixed-padding

    &--variant-solo,
    &--variant-solo-filled
      background: $field-control-solo-background
      border-color: transparent
      color: $field-control-solo-color
      @include tools.elevation($field-control-solo-elevation)

    &--variant-solo-inverted
      background: $field-control-solo-background
      border-color: transparent
      color: $field-control-solo-inverted-color
      @include tools.elevation($field-control-solo-elevation)

      &.v-field--focused
        color: $field-control-solo-inverted-focused-color

    &--variant-filled
      border-bottom-left-radius: 0
      border-bottom-right-radius: 0

    &--variant-solo,
    &--variant-solo-inverted,
    &--variant-solo-filled,
    &--variant-filled
      $root: &

      @at-root
        @include tools.density('v-input', $input-density) using ($modifier)
          @at-root #{selector.nest(&, $root)}
            --v-input-control-height: #{$field-control-height + $modifier}
            --v-field-padding-bottom: #{math.max(0px, $field-control-padding-bottom + $modifier * .5)}

    &--variant-outlined,
    &--single-line,
    &--no-label
      --v-field-padding-top: 0px
      $root: &

      @at-root
        @include tools.density('v-input', $input-density) using ($modifier)
          @at-root #{selector.nest(&, $root)}
            --v-field-padding-bottom: #{16px + $modifier * .5}

    &--variant-plain,
    &--variant-underlined
      $root: &
      border-radius: 0
      padding: 0

      &.v-field
        --v-field-padding-start: 0px
        --v-field-padding-end: 0px

      @at-root
        @include tools.density('v-input', $input-density) using ($modifier)
          @at-root #{selector.nest(&, $root)}
            --v-input-control-height: #{$field-control-underlined-height + $modifier}
            --v-field-padding-top: #{math.max(0px, 4px + $modifier * .25)}
            --v-field-padding-bottom: #{math.max(0px, $field-control-padding-bottom + $modifier * .5)}

    &--flat
      box-shadow: none

    &--rounded
      @include tools.rounded($field-rounded-border-radius)

    // These are separate so they can override the default variant styles
    &.v-field
      &--prepended
        --v-field-padding-start: #{$field-control-affixed-inner-padding}

      &--appended
        --v-field-padding-end: #{$field-control-affixed-inner-padding}

  /* endregion */
  /* region ELEMENTS */
  .v-field__input
    align-items: center
    color: inherit
    column-gap: $field-input-column-gap
    display: flex
    flex-wrap: wrap
    letter-spacing: $field-letter-spacing
    opacity: $field-input-opacity
    min-height: $field-input-min-height
    min-width: 0
    padding-inline: var(--v-field-padding-start) var(--v-field-padding-end)
    padding-top: var(--v-field-input-padding-top)
    padding-bottom: var(--v-field-input-padding-bottom)
    position: relative
    width: 100%

    $root: &

    @at-root
      @include tools.density('v-input', $input-density) using ($modifier)
        @at-root #{selector.nest(&, $root)}
          row-gap: #{$field-input-row-gap + $modifier * .25}

    input
      letter-spacing: inherit

    @at-root :where(& input, input#{&}, textarea#{&}, select#{&})
/* ... */

